<resources>
    <string name="app_name">Doha hub</string>
    <string name="login_title">Login</string>
    <string name="login_subtitle">Login to continue</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="forget_password">forgot password?</string>
    <string name="login">Login</string>
    <string name="register_question">Don\'t have an account?</string>
    <string name="underlined_register"><u>Register</u></string>
    <string name="register_title">Register</string>
    <string name="register_subtitle">Create Free Account</string>
    <string name="user_option">User</string>
    <string name="provider_option">Provider</string>
    <string name="email_hint">Email address</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="create_an_account">Create an account</string>
    <string name="login_question">Have an account?</string>
    <string name="underlined_login"><u>Login</u></string>
    <string name="empty_field_error_message">Please fill this field</string>
    <string name="password_length_error_message">Password must contains at least 6 characters</string>
    <string name="something_went_wrong_try_again_later">Something went wrong, try again later</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="dismiss">Dismiss</string>
    <string name="ok">OK</string>
    <string name="email_validation_error_message">Email is not valid</string>
    <string name="username_length_error_message">username must contains at least 3 characters</string>
    <string name="home_header">Home</string>
    <string name="home_title">Find And\nHire In Seconds.</string>
    <string name="home_subtitle">Create unique content for your brand.</string>
    <string name="featured">Featured</string>
    <string name="explore_all">Explore all</string>
    <string name="videographer">Videographer</string>
    <string name="empty_featured_text">No featured found</string>
    <string name="tap_to_retry">Tap to Retry</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="my_services">My Services</string>
    <string name="articles">Articles</string>
    <string name="orders">Orders</string>
    <string name="hub_market">Hub Market</string>
    <string name="campaigns">Campaigns</string>
    <string name="work_shops">Workshops</string>
    <string name="about_us">About Us</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="update_account">Update account</string>
    <string name="underlined_change_password"><u>Change your password</u></string>
    <string name="wait_uploading_photo_message">Please wait for your photo to be uploaded</string>
    <string name="edit_profile_successful_message">Your profile has been updated successfully</string>
    <string name="upload_failed">Upload failed</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="confirmation">Confirmation</string>
    <string name="all">All</string>
    <string name="change_password_title">Change your password</string>
    <string name="old_password_hint">Old password</string>
    <string name="new_password_hint">New password</string>
    <string name="confirm_new_password_hint">Confirm new password</string>
    <string name="save">Save</string>
    <string name="confirmation_password_error_message">New password and it\'s confirmation don\'t match</string>
    <string name="change_password_successful_message">Your password has been changed successfully</string>
    <string name="price_with_currency">%1$s SAR</string>
    <string name="hub_market_header">Hub market</string>
    <string name="market_categories">Categories</string>
    <string name="empty_products_text">No product found</string>
    <string name="add_new_product">Add new product</string>
    <string name="add_product_header">Add new product</string>
    <string name="upload_photo">Upload photo</string>
    <string name="product_title_hint">Product title</string>
    <string name="item_price_hint">Item price</string>
    <string name="category_hint">Select category</string>
    <string name="city_hint">Select your city</string>
    <string name="whats_app_hint">Whatsapp</string>
    <string name="address_hint">Your address</string>
    <string name="product_details_hint">Product details</string>
    <string name="product_details_header">Hub market details</string>
    <string name="product_phone_title">Phone</string>
    <string name="product_chat_title">Send message</string>
    <string name="product_location_title">Location</string>
    <string name="details_title">Details</string>
    <string name="provider_details_header">Provider details</string>
    <string name="portfolio_title">Portfolio</string>
    <string name="underline_how_it_works"><u>How does it work?</u></string>
    <string name="checkout">Checkout</string>
    <string name="product_title_length_error_message">product title must contains at least 3 characters</string>
    <string name="empty_spinner_field_error_message">Please choose one option</string>
    <string name="change_photo">Change photo</string>
    <string name="add_product_successful_message">Your product has been added successfully</string>
    <string name="submit_product">Submit your product</string>
    <string name="empty_portfolio_text">No portfolio found</string>
    <string name="client_orders">Client Orders</string>
    <string name="my_campaigns">My Campaigns</string>
    <string name="client_campaigns">Hub Campaigns</string>
    <string name="empty_providers_text">No providers found</string>
    <string name="continue_">Continue</string>
    <string name="checkout_hint">A hold will be placed on your card for 72 hours , and you will only be charged if your request is accepted</string>
    <string name="service_summary">Service Summary</string>
    <string name="subtotal">Subtotal</string>
    <string name="commission">Commission</string>
    <string name="total">Total</string>
    <string name="checkout_date_title">select the preferred date for your service</string>
    <string name="checkout_date_hint">MM/DD/YY</string>
    <string name="provider_service_required">Please select service to continue</string>
    <string name="articles_header">Hub articles</string>
    <string name="empty_articles_text">No articles found</string>
    <string name="article_details_header">Article details</string>
    <string name="users_comments">Users comments</string>
    <string name="add_new_article">Create new article</string>
    <string name="add_article_header">Create new article</string>
    <string name="article_name_hint">Name</string>
    <string name="submit_article">Submit your article</string>
    <string name="article_name_length_error_message">Article name must contains at least 3 characters</string>
    <string name="add_article_successful_message">Your article has been added successfully</string>
    <string name="keyboard_search_button">Search</string>
    <string name="empty_orders_text">No orders found</string>
    <string name="checkout_header">Checkout</string>
    <string name="order_details_header">Order details</string>
    <string name="date">Date</string>
    <string name="delete_my_order">Delete my order</string>
    <string name="finish_order">Finish order</string>
    <string name="send_message">Send message</string>
    <string name="my_orders_header">My orders</string>
    <string name="my_services_header">My services</string>
    <string name="empty_services_text">No services found</string>
    <string name="add_new_service">Add new service</string>
    <string name="add_service_header">Add new service</string>
    <string name="service_category_hint">Select main service</string>
    <string name="service_details_hint">Add more description about your service</string>
    <string name="service_price_hint">Add your service price</string>
    <string name="service_title_hint">Add your service title</string>
    <string name="service_title_length_error_message">Service title must contains at least 3 characters</string>
    <string name="add_service_successful_message">Your service has been added successfully</string>
    <string name="submit_service">Submit your service</string>
    <string name="submit_feedback">Submit your feedback</string>
    <string name="order_status_pending">Pending</string>
    <string name="order_status_confirmed">Confirmed</string>
    <string name="order_status_finished">Finished</string>
    <string name="client_orders_header">Client orders</string>
    <string name="order_case">Case</string>
    <string name="accept_order">Accept order</string>
    <string name="order_feedback">Order feedback</string>
    <string name="feedback_hint">Add your feedback ...</string>
    <string name="delete_order_success_message">Your order has been deleted successfully</string>
    <string name="finish_order_success_message">Your order has been finished successfully</string>
    <string name="accept_order_success_message">Order has been accepted successfully</string>
    <string name="delete_service_success_message">Your service has been removed successfully</string>
    <string name="phone_length_error_message">Phone must contains at least 8 characters</string>
    <string name="pick_category_to_filter">Pick category to filter</string>
    <string name="profile_header">My profile</string>
    <string name="go_my_orders">My orders</string>
    <string name="social_media_link_error_message">Sorry this link is not available now</string>
    <string name="side_menu_how_it_works">How it works</string>
    <string name="edit_service_header">Edit my service</string>
    <string name="my_articles">My Articles</string>
    <string name="all_articles">Hub Articles</string>
    <string name="my_articles_header">My articles</string>
    <string name="update_article">Update article</string>
    <string name="delete_article">Delete article</string>
    <string name="edit_article_header">Update my article</string>
    <string name="delete_article_successful_message">Your article has been deleted successfully</string>
    <string name="update_article_successful_message">Your article has been updated successfully</string>
    <string name="my_items">My Products</string>
    <string name="all_hub_market">Hub Market</string>
    <string name="my_products_header">My products</string>
    <string name="edit_product_header">Update my product</string>
    <string name="delete_product">Delete product</string>
    <string name="update_product">Update product</string>
    <string name="delete_product_successful_message">Your product has been deleted successfully</string>
    <string name="update_product_successful_message">Your product has been updated successfully</string>
    <string name="feedback_success_message">Your feedback has been sent successfully</string>
    <string name="feedback_length_error_message">Feedback must contains at least 15 characters</string>
    <string name="update_service">Update</string>
    <string name="edit_service_successful_message">Your service has been updated successfully</string>
    <string name="search_hint">Search</string>
    <string name="username_length_error_message_1">username must contains maximum 30 characters</string>
    <string name="phone_length_error_message_1">Phone must contains maximum 12 characters</string>
    <string name="article_details_hint">Article details</string>
    <string name="search_article_hint">Search article</string>
    <string name="sign_in_with_google">SIGN IN WITH GOOGLE</string>
    <string name="phone_number_email_hint">Email or Phone number</string>
</resources>