<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/error_animation"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/error_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="center"
            android:text="@string/upload_failed"
            android:textColor="@color/error_dialog_message_color"
            android:textSize="@dimen/_17ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/error_animation"
            tools:text="Upload failed" />

        <TextView
            android:id="@+id/error_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="center"
            android:textColor="@color/error_dialog_message_color"
            android:textSize="@dimen/_17ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/error_title"
            tools:text="No internet connection" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/retry_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:fontFamily="@font/quicksand_medium"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:paddingStart="@dimen/_25sdp"
            android:paddingEnd="@dimen/_25sdp"
            android:text="@string/retry"
            android:textAllCaps="false"
            android:textColor="@color/error_dialog_retry_dismiss_text_color"
            android:textSize="@dimen/_14ssp"
            android:theme="@style/Theme.MaterialComponents"
            app:backgroundTint="@color/error_dialog_retry_text_background_color"
            app:cornerRadius="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cancel_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/error_message" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/quicksand_medium"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:paddingStart="@dimen/_25sdp"
            android:paddingEnd="@dimen/_25sdp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/error_dialog_dismiss_text_color"
            android:textSize="@dimen/_14ssp"
            android:theme="@style/Theme.MaterialComponents"
            app:backgroundTint="@color/error_dialog_dismiss_text_background_color"
            app:cornerRadius="@dimen/_8sdp"
            app:layout_constraintBaseline_toBaselineOf="@id/retry_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/retry_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
